syntax = "proto3";

package commontype;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.type";
option java_outer_classname = "ClientInfoProto";
option optimize_for = SPEED;

message ClientInfo{
  string tenantId = 1;
  string type = 2; // the type of the calling client could be external user client or internal service
  map<string, string> metadata = 3; // the metadata of the client
}